--- a/src/main/resources/view/drug.fxml
+++ b/src/main/resources/view/drug.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="404.0" prefWidth="664.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.DrugController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="404.0" prefWidth="664.0" xmlns="http://javafx.com/javafx/8.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hospital.controller.DrugController">
    <children>
       <GridPane layoutX="50.0" layoutY="14.0" prefHeight="289.0" prefWidth="214.0">
         <columnConstraints>
@@ -31,7 +30,7 @@
             <Label text="Name" GridPane.rowIndex="1" />
             <Label text="Quantity" GridPane.rowIndex="3" />
             <Label text="Price" GridPane.rowIndex="2" />
-            <TextField fx:id="idText" GridPane.columnIndex="1" />
+            <TextField fx:id="idText" editable="false" GridPane.columnIndex="1" />
             <TextField fx:id="nameText" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="priceText" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="quantityText" GridPane.columnIndex="1" GridPane.rowIndex="3" />
